Responsividade; Menu mobile

--- a/index.html
+++ b/index.html
@@ -16,9 +16,41 @@
 
             <div class="header-left">
 
+                <input type="checkbox" id="toggle-mobile">
+                <label for="toggle-mobile" class="toggle-icon"><img src="assets/images/menu-toggle.png" alt=""></label>
                 <a href="index.html"><img src="assets/images/logo.png" class="logo"></a>
 
+                <div class="bg-escuro"></div>
+
+                <div class="menu-mobile-aberto">
+
+                    <input type="checkbox" id="fechar-toggle">
+
+                    <div class="bg-botao-fechar">
+
+                        <label for="fechar-toggle"><img class="botao-fechar" src="assets/images/botao-fechar.png"
+                                alt=""></label>
+
+                    </div>
+
+                    <div class="menu-mobile">
+
+                        <ul class="nav-mobile">
+
+                            <li>Teste</li>
+                            <li>Teste</li>
+                            <li>Teste</li>
+                            <li>Teste</li>
+                            <li>Teste</li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
+
             </div>
+
 
 
             <div class="categoria">
@@ -97,6 +129,7 @@
 
         <div class="apresentacao_produto">
 
+
             <div class="imagens_produtos">
 
                 <div class="imagens_vertical">
@@ -109,7 +142,6 @@
 
                 </div>
 
-
             </div>
 
             <div class="imagem_atual">
@@ -117,6 +149,7 @@
                 <img src="assets/images/foto-produto.jpg" alt="">
 
             </div>
+
 
             <div class="informacao_produto">
 
@@ -161,6 +194,8 @@
                     </div>
 
                 </div>
+
+
 
                 <div class="garantia_produto">
 
@@ -222,14 +257,16 @@
 
     </section>
 
-    <section class="compra">
+
+    <div class="compra">
 
         <div class="botao_compra mobile">
             <a class="button" id="comprar_button">Comprar agora</a>
             <a class="button" id="adicionar_carrinho_button">Adicionar ao carrinho</a>
         </div>
 
-    </section>
+
+    </div>
 
 </body>
 
