--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="header-left">
 
                 <input type="checkbox" id="toggle-mobile">
-                <label for="toggle-mobile" class="toggle-icon"><img src="assets/images/menu-toggle.png" alt=""></label>
+                <label for="toggle-mobile" class="toggle-icon">
+                    <img src="assets/images/menu-toggle.png" alt="">
+                </label>
                 <a href="index.html"><img src="assets/images/logo.png" class="logo"></a>
 
                 <div class="bg-escuro"></div>
@@ -28,8 +30,9 @@
 
                     <div class="bg-botao-fechar">
 
-                        <label for="fechar-toggle"><img class="botao-fechar" src="assets/images/botao-fechar.png"
-                                alt=""></label>
+                        <label for="fechar-toggle">
+                            <img class="botao-fechar" src="assets/images/botao-fechar.png" alt="">
+                        </label>
 
                     </div>
 
