--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AliExpress</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,39 +14,58 @@
 
     <header>
 
-        <div class="container">
+        <nav class="navbar bg-dark fixed-top">
 
-            <div class="header-left">
+            <div class="container-fluid">
 
-                <input type="checkbox" id="toggle-mobile">
-                <label for="toggle-mobile" class="toggle-icon">
-                    <img src="assets/images/menu-toggle.png" alt="">
-                </label>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
                 <a href="index.html"><img src="assets/images/logo.png" class="logo"></a>
 
-                <div class="bg-escuro"></div>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
 
-                <div class="menu-mobile-aberto">
+                    <div class="offcanvas-header">
 
-                    <input type="checkbox" id="fechar-toggle">
-
-                    <div class="bg-botao-fechar">
-
-                        <label for="fechar-toggle">
-                            <img class="botao-fechar" src="assets/images/botao-fechar.png" alt="">
-                        </label>
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">AliExpress</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 
                     </div>
 
-                    <div class="menu-mobile">
+                    <div class="offcanvas-body">
 
-                        <ul class="nav-mobile">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-                            <li>Teste</li>
-                            <li>Teste</li>
-                            <li>Teste</li>
-                            <li>Teste</li>
-                            <li>Teste</li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+
+                            <li class="nav-item dropdown">
+
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Dropdown
+                                </a>
+
+                                <ul class="dropdown-menu">
+
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+
+                                </ul>
+
+                            </li>
 
                         </ul>
 
@@ -52,79 +73,79 @@
 
                 </div>
 
-            </div>
 
 
 
-            <div class="categoria">
+                <div class="categoria">
 
-                <div class="header-menu"><img src="assets/images/menu-toggle.png"></div>
+                    <div class="header-menu"><img src="assets/images/menu-toggle.png"></div>
 
-                <div class="row">
+                    <div class="row">
 
-                    <div class="subcategoria">
+                        <div class="subcategoria">
 
-                        <div class="todas_categorias">
+                            <div class="todas_categorias">
 
-                            <div><img src="assets/images/submenu-toggle.png" alt=""></div>
-                            <h4>Todas as categorias</h4>
+                                <div><img src="assets/images/submenu-toggle.png" alt=""></div>
+                                <h4>Todas as categorias</h4>
+
+                            </div>
+
+                            <ul>
+
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+
+                            </ul>
 
                         </div>
 
-                        <ul>
+                        <div class="subcategoria_right">
 
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
+                            <ul>
 
-                        </ul>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
+                                <li><a>Teste</a></li>
 
-                    </div>
+                            </ul>
 
-                    <div class="subcategoria_right">
-
-                        <ul>
-
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-                            <li><a>Teste</a></li>
-
-                        </ul>
+                        </div>
 
                     </div>
 
                 </div>
 
-            </div>
+                <form>
 
-            <form>
+                    <input type="text" placeholder="Buscar produto">
 
-                <input type="text" placeholder="Buscar produto">
+                    <img src="assets/images/search-image-photo.png" id="search-image-photo">
 
-                <img src="assets/images/search-image-photo.png" id="search-image-photo">
+                    <div class="search-image">
 
-                <div class="search-image">
+                        <img src="assets/images/search-image.png" id="search-image">
 
-                    <img src="assets/images/search-image.png" id="search-image">
+                    </div>
+
+                </form>
+
+                <div class="header-right">
+
+                    <img src="assets/images/qr-code-shortcut.png" id="qr-code-shortcut">
 
                 </div>
 
-            </form>
-
-            <div class="header-right">
-
-                <img src="assets/images/qr-code-shortcut.png" id="qr-code-shortcut">
-
             </div>
 
-        </div>
-
+        </nav>
 
     </header>
 
@@ -270,6 +291,10 @@
 
 
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
